crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__minute__single__range_periodic_reverse.snap
---
source: crates/tools/cron/src/tests/unit/minute.rs
expression: result
---
Ok(
    (
        "",
        MinuteRule {
            kinds: [
                MinuteKind {
                    range: (
                        Minute(
                            59,
                        ),
                        Minute(
                            0,
                        ),
                    ),
                    periodic: MinutePeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
