crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__minute__single__specifier_39.snap
---
source: crates/tools/cron/src/tests/unit/minute.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    "",
                    '-',
                ),
                Nom(
                    "39",
                    Alt,
                ),
            ],
        },
    ),
)
